[project]
name = "dj26-api"
version = "0.1.0"
description = "DJ26 API"
authors = [
    {name = "pysatellite", email = "pysatellite@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
